--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head>	  
     <meta charset="utf-8">
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/phaser-raycaster@0.10.2/dist/phaser-raycaster.min.js"></script>
   </head>
   <body>
+	<script type="text/javascript" src="bundle.min.js"></script></body>
   </body>
 </html>
+  <!--  <script type="text/javascript" src="bundle.min.js"></script></body> -->
